<resources>
    <!-- Nome App -->
    <string name="app_name">Calculadora CLT</string>

    <!-- Menu Action -->
    <string name="action_settings">Settings</string>
    <string name="action_sobre">Sobre</string>

    <!-- Rescisao -->
    <string name="rescisao">Rescisão</string>
    <string name="dt_contratacao">Data de contratação</string>
    <string name="dt_demissao">Data de desligamento</string>
    <string name="motivo">Motivo</string>
    <string name="aviso_previo">Aviso prévio</string>
    <string name="saldo_fgts">Saldo FGTS</string>
    <string name="ferias_ano_anterior">Possui férias do ano anterior?</string>
    <string name="ferias_vencidas">Férias vencidas</string>

    <!-- Ferias -->
    <string name="ferias">Férias</string>
    <string name="ferias_cifra">Férias (R$)</string>
    <string name="ferias_adicional">1/3 adicional (R$)</string>
    <string name="abono_pecuniario">Abono pecuniário(Vender 1/3)</string>
    <string name="abono_pecuniario_abreviado">Abono pecuniário</string>
    <string name="abono_pecuniario_abreviado_cifra">Abono pecuniário (R$)</string>
    <string name="abono_pecuniario_abreviado_adicional">Abono 1/3 adicional (R$)</string>
    <string name="horas_extras">Horas extras no ano (R$)</string>
    <string name="dias_usufruidos">Dias de férias</string>
    <string name="dias_usufruidos_invalido">Informe a quantidade de dias maior que zero!</string>

    <!-- Sal Liquido -->
    <string name="sal_liquido">Salário Líquido</string>
    <string name="plano_saude">Plano de saúde (R$)</string>
    <string name="pensao">Pensão alimentícia (R$)</string>
    <string name="outros_descontos">Outros descontos (R$)</string>

    <!-- Sobre -->
    <string name="gohorse_project">GoHorse Project</string>
    <string name="github">https://github.com/carvalhobm/CalculadoraCLT</string>
    <string name="github_description">GitHub</string>

    <!-- Comum -->
    <string name="sal_bruto">Salário Bruto</string>
    <string name="sal_bruto_cifra">Salário Bruto (R$)</string>
    <string name="dependentes">Dependentes</string>
    <string name="cifra">(R$)</string>
    <string name="label_calcular">Calcular</string>
    <string name="label_resultado">Líquido a receber</string>
    <string name="descontos">Descontos</string>
    <string name="proventos">Proventos</string>
    <string name="label_inss">INSS (R$)</string>
    <string name="label_irrf">IRRF (R$)</string>
    <string name="label_valores_informados">Valores Informados</string>
    <string name="label_sim">Sim</string>
    <string name="label_nao">Não</string>
    <string name="sal_bruto_invalido">Informe um Salário Bruto maior que zero!</string>

    <string name="title_activity_result">ResultActivity</string>

</resources>
