<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:fillViewport="true"
    tools:context="com.brunocarvalho.calculadoraclt.fragments.SalLiquidoFragment">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textViewTituloSalLiquido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/sal_liquido"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_label"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_salario_bruto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_salario_bruto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sal_bruto_cifra"
                android:inputType="numberDecimal"
                android:maxLength="9" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_dependentes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_dependentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dependentes"
                android:inputType="number"
                android:maxLength="4" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pensao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_pensao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pensao"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_plano_saude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_plano_saude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plano_saude"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_descontos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_descontos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_layout_salario_bruto"
                android:hint="@string/outros_descontos"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_calcular_sal_liquido"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_calcular"
            android:textColor="@color/colorPrimary" />

    </android.support.v7.widget.LinearLayoutCompat>
</ScrollView>