<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brunocarvalho.calculadoraclt.fragments.FeriasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/ferias"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/title_label"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_salario_bruto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_salario_bruto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sal_bruto_cifra"
                    android:inputType="numberDecimal"
                    android:textColorHighlight="@color/colorPrimary" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_horas_extras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_horas_extras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/input_layout_salario_bruto"
                    android:hint="@string/horas_extras"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dependentes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_dependentes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dependentes"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_dias_usufruidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_dias_usufruidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dias_usufruidos"
                    android:inputType="numberDecimal"
                    android:maxLength="2" />

            </android.support.design.widget.TextInputLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/switch_abono_pecuniario"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:text="@string/abono_pecuniario" />

                <Switch
                    android:id="@+id/switch_abono_pecuniario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/switch_adiantar_decimo_terceiro"
                    android:paddingRight="20dp"
                    android:paddingTop="15dp"
                    android:text="@string/adiantar_decimo_terceiro" />

                <Switch
                    android:id="@+id/switch_adiantar_decimo_terceiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </GridLayout>

            <Button
                android:id="@+id/btn_calcular_ferias"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_calcular"
                android:textColor="@color/colorPrimary" />

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</RelativeLayout>
